--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.16.6",
-    "tailwindcss": "^4.1.18"
+    "fmt": "prettier . --write --experimental-cli"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.7.3",
-    "astro-eslint-parser": "^1.2.2",
-    "eslint": "^9.39.2",
-    "eslint-plugin-astro": "^1.5.0"
+    "@prettier/plugin-oxc": "^0.1.3",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.15",
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.1.18"
+  },
+  "overrides": {
+    "vite": "8.0.0-beta.10"
+  },
+  "prettier": {
+    "plugins": [
+      "@prettier/plugin-oxc",
+      "prettier-plugin-astro",
+      "prettier-plugin-organize-imports",
+      "prettier-plugin-tailwindcss"
+    ],
+    "printWidth": 100
   }
 }
