--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prettier/plugin-oxc": "^0.1.3",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "6.0.0-beta.3",
+    "daisyui": "^5.5.14",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "^4.3.0",
